# cronken_webui

./: LICENSE  README.md  cronken_webui.py  pyproject.toml
static_files/css/: screen.css
static_files/js/: cronken.js
templates/: _job_form.html.j2  _output.html.j2  completed.html.j2  create_update_job.html.j2  dashboard.html.j2  failed.html.j2  layout.html.j2  macros.html.j2  output.html.j2  setup.html.j2  view_job_runs.html.j2
