[tool.poetry]
name = "cronken-webui"
version = "0.1.0"
description = ""
authors = ["Clint Olson <coandco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
coredis = "^4.14.0"
aiohttp = "<4.0.0"
aiohttp-jinja2 = "^1.5.1"
humanize = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
